--- a/styles.css
+++ b/styles.css
@@ -74,21 +74,6 @@ h2 {
     padding-top: 0.9rem;
 }
 
-h4 {
-    
-}
-
-p {
-    
-}
-
-a,
-a * {
-    
-}
-
-
-
 /*** header ***
   
   Purpose:
@@ -220,6 +205,18 @@ a * {
     margin-bottom: 1.2rem;
 }
 
+.video-container{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+}
+
+.video-container iframe {
+    height: 100%;
+    width: 100%;
+
+}
+
 .event-description {
     margin-top: 0.8rem;
 }
@@ -312,7 +309,7 @@ a:hover {
 }
 
 a:active {
-    color: blue;
+    color: gray;
     text-decoration: underline;
 }
 
