--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@
 ***/
 html {
     background-color: var(--bg-color);
-    scroll-padding-top: 50px;
+    scroll-padding-top: 100px;
+    scroll-behavior: smooth;
 }
 
 * {
@@ -41,7 +42,8 @@ body {
     font-family: Tahoma, sans-serif; /* This tells the browser: "Try to use `Tahoma`, and if you can't find it, use any sans-serif font." */
 
     /* Put space around the edges of the webpage */
-    margin: 50px;
+    padding: 50px;
+    margin: 0;
 }
 
 /*** Text ***
@@ -205,18 +207,6 @@ h2 {
     margin-bottom: 1.2rem;
 }
 
-.video-container{
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-}
-
-.video-container iframe {
-    height: 100%;
-    width: 100%;
-
-}
-
 .event-description {
     margin-top: 0.8rem;
 }
@@ -317,7 +307,59 @@ a:active {
 /*** RSVP [PLACEHOLDER] [ADDED IN UNIT 6] ***/
 /*** Animations [PLACEHOLDER] [ADDED IN UNIT 8] ***/
 /*** Success Modal [PLACEHOLDER] [ADDED IN UNIT 9] ***/
-/*** Dark Mode [PLACEHOLDER] [ADDED IN UNIT 5] ***/
+
+/* Default dark mode style */
+
+#theme-button {
+    background-color: orange;
+    border-radius: 5rem;
+    padding-right: 0.7rem;
+    padding-left: 0.7rem;
+    border: thin;
+    color: white;
+}
+
+#theme-button:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.dark-mode {
+    background-color: #1E1E1E;
+    color: white;
+    margin: 0;
+}
+
+/* Example: Different dark mode style for h1 */
+.dark-mode .header-item h1 {
+    color: #E67E22;
+}
+
+.dark-mode .header-item h3 {
+    color: #A9B1D6;
+}
+
+.dark-mode .event-item {
+    border: 3px solid white;
+}
+.dark-mode .event-container h3, .dark-mode .event-container p  {
+    color: white;
+}
+
+
+.dark-mode #links {
+    color: white;
+}
+
+.dark-mode .block article h3, .dark-mode .block article p {
+    color: white;
+}
+/* Example: Different dark mode style for visited links */
+.dark-mode a:visited * {
+
+}
+
+
 
 /*** Custom Colors (OPTIONAL) ***
   
@@ -336,7 +378,7 @@ a:active {
     --text-color: #231942;
 
     /* Dark Mode */
-    --bg-color-dark-mode: #3e3377;
+    --bg-color-dark-mode: 1E1E1E;
     --text-color-dark-mode: #fff;
 
     /* Accent Colors */
